# SyncBone

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
benchmarks/: bench_main.cpp
include/syncbone/: sync.hpp
src/: main.cpp  sync.cpp
test_data/: sample.txt  unicode_файл.txt
test_data/dirA/: file1.txt
test_data/dirA/dirB/: file2.txt
tests/: CMakeLists.txt  unit_cli_test.cpp  unit_edge.cpp  unit_sync.cpp
